<resources>
    <string name="app_name">PfInal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_titulo">Titulo</string>
    <string name="txt_descripcion">Descripcion</string>
    <string name="btn_multimedia">Multimedia</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_buscar">Buscar</string>
    <string name="txt_tipo">Tipo</string>
    <string name="txt_fecha">Fecha</string>
    <string name="txt_id">ID</string>
    <string name="btn_agregar">Agregar</string>
</resources>
