<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroNotaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtadd_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/txt_id"
            android:inputType="textPersonName"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/txtadd_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:ems="10"
            android:hint="@string/txt_titulo"
            android:inputType="textPersonName"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/txtadd_descripcion"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/txt_descripcion"
            android:inputType="textMultiLine"
            android:textSize="20sp"/>

        <ImageButton
            android:id="@+id/btnadd_media"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <Button
            android:id="@+id/btnadd_guardar"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="10dp"
            android:onClick="onClick"
            android:text="@string/btn_guardar"
            android:textSize="25sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>